deployment/kubernetes/base/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-namespace
  annotations:
    iam.amazonaws.com/permitted: .*
