deployment/kubernetes/base/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-project-service
spec:
  selector:
    name: cloud-project-service
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
