deployment/kubernetes/base/resources/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cloud-project-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - backend:
          serviceName: cloud-project-service
          servicePort: http
        path: /
  tls:
  - hosts:
    - foo.bar.com
    secretName: cloud-project-service-ingress-cert
